--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Finances</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   </head>
   <body>
 
-  	<header>
-	  	<h1><%= title %></h1>
-	    <p>Welcome to <%= title %></p>
+  	<section>
+  		<a href="/records/new" class="btn btn-primary">Add</a>
 
-		<form action="/records" method="post">
-			<div class="form-group">
-				<label for="description">Description</label>
-				<input type="text" class="form-control" name="description" placeholder="Description">
-			</div>
-			<div class="form-group">
-				<label for="value">Value</label>
-				<input type="number" class="form-control" name="value" placeholder="value (R$)">
-			</div>
-			<div class="form-group">
-				<label for="type">Type</label>
-				<select class="custom-select mr-sm-2" name="type">
-			        <option selected>Choose...</option>
-			        <option value="C">Credit</option>
-			        <option value="D">Debt</option>
-			    </select>
-			</div>
-			<div class="form-group">
-				<label for="date">Type</label>
-				<input type="datetime-local" class="form-control" name="date">
-			</div>
+  		<table class="table table-striped table-bordered">
+  			<thead>
+  				<tr>
+  					<th>Description</th>
+  					<th>Date</th>
+  					<th>Value</th>
+  					<th>Type</th>
+  					<th></th>
+  				</tr>
+  			</thead>
 
-			<input type="submit" value="Save" />
-		</form>	
+  			<tbody>
+			  	<% records.forEach(function(record){ %>
+			  		
+			  		<tr>
+			  			<td><%= record.description %></td>
+			  			<td><%= record.date %></td>
+			  			<td><%= record.value %></td>
+			  			<td><%= record.type %></td>
+			  			<td width="60">
+			  				<a href="/records/<%= record._id %>/edit"> <i class="fas fa-pen"></i> </a>
+			  				<a href="/records/<%= record._id %>/delete"> <i class="fas fa-trash"></i> </a>
+			  			</td>
+			  		</tr>	
 
-  	</header>
+			  	<% }) %>
+	  		</tbody>
+	    </table>
+
+			
+
+  	</section>
     
 
 
