--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   	<% include ./partials/app-header %>
 
   	<section>
-  		<a href="/records/new" class="btn btn-primary">Add</a>
+  		<a href="/records/new" class="btn btn-primary mb-2"> <i class="fas fa-plus"></i> Add</a>
 
   		<table class="table table-striped table-bordered">
   			<thead>
